--- a/Cargo.toml
+++ b/Cargo.toml
@@ -304,6 +304,10 @@ version = "0.6.5"
 version = "0.14.1"
 features = ["yaml"]
 
+[workspace.dependencies.console]
+version = "0.16"
+features = ["std"]
+
 [workspace.dependencies.crossterm]
 version = "0.28.1"
 
@@ -359,7 +363,7 @@ version = "0.3.2"
 version = "0.9.5"
 
 [workspace.dependencies.homedir]
-version = "0.3.4"
+version = "0.3.5"
 
 [workspace.dependencies.http]
 version = "1.3.1"
@@ -378,10 +382,11 @@ version = "0.4.23"
 version = "0.7.4"
 
 [workspace.dependencies.indexmap]
-version = "2.9.0"
+version = "2.10.0"
 
 [workspace.dependencies.indicatif]
 version = "0.17.11"
+features = ["default", "improved_unicode"]
 
 [workspace.dependencies.itertools]
 version = "0.13.0"
