--- a/server/libraries/td-supervisor/Cargo.toml
+++ b/server/libraries/td-supervisor/Cargo.toml
@@ -30,7 +30,7 @@ test_logging = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "ignore", "indicatif", "strum", "toml", "tm-workspace", "windows", "windows-sys"]
+ignored = ["openssl", "console", "ignore", "indicatif", "strum", "toml", "tm-workspace", "windows", "windows-sys"]
 
 # Build dependencies
 
@@ -74,13 +74,14 @@ base64 = { workspace = true }
 chrono = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 clap_derive = { workspace = true }
+console = { workspace = true, features = ["std"] }
 derive_builder = { workspace = true }
 dirs = { workspace = true }
 futures = { workspace = true }
 getset = { workspace = true }
 http = { workspace = true }
 humantime = { workspace = true }
-indicatif = { workspace = true }
+indicatif = { workspace = true, features = ["default", "improved_unicode"] }
 ignore = { workspace = true }
 include_dir = { workspace = true }
 indexmap = { workspace = true }
