--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,7 @@
 #
 
 [alias]
-xtask = "run --manifest-path ./devutils/automation/tasks/makers/td-xtask/Cargo.toml --"
+xtask = "run --locked --manifest-path ./devutils/automation/tasks/makers/td-xtask/Cargo.toml --"
 
 [build]
 # Uncomment if you want to enable the tokio_console feature.
