--- a/expansions/polars/Cargo.toml
+++ b/expansions/polars/Cargo.toml
@@ -25,7 +25,7 @@ license = "Apache 2.0"
 publish = false
 readme = "../../README.md"
 repository = "https://github.com/tabsdata/tabsdata"
-rust-version = "1.87.0"
+rust-version = "1.88.0"
 version = "0.9.7"
 
 [workspace]
@@ -104,7 +104,7 @@ default-features = false
 version = "0.46.0"
 default-features = false
 
-# Note: Each pyo3-polars is tightly tied to an specific version of pyo3.
+# Note: Each pyo3-polars is tightly tied to a specific version of pyo3.
 # Pay attention to these any time you intend to upgrade pyo3 dependency version.
 
 [workspace.dependencies.openssl]
