--- a/.github/events/release.json
+++ b/.github/events/release.json
@@ -2,6 +2,7 @@
   "inputs": {
     "td_product": "standard",
     "runner_mode": "release",
+    "runner_action": "build",
     "dump_server": "false",
     "run_on_linux_x86_64": "true",
     "run_on_linux_arm_64": "false",
