--- a/Cargo.toml
+++ b/Cargo.toml
@@ -581,7 +581,7 @@ version = "2.4.0"
 # when writing this (2025.06.19) breaks the code.
 [workspace.dependencies.windows]
 version = "0.60.0"
-features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"]
+features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"]
 
 [workspace.dependencies.windows-sys]
 version = "0.60.2"
