--- a/Maketask.toml
+++ b/Maketask.toml
@@ -92,7 +92,13 @@ script = [
     set_env TD_PYTHON_LINKED_TO_REPOSITORY "false"
     set_env TD_INHERIT_TABSDATA_PACKAGES "false"
     set_env TD_REMOTE_DEBUG "false"
-    set_env TD_UI_MODE "internal"
+
+    td_ui_mode = get_env TD_UI_MODE
+    if ${td_ui_mode}
+        info "☂️ TD_UI_MODE set. Using '${td_ui_mode}' for install tasks..."
+    else:
+        info "☂️ TD_UI_MODE not set. Using 'internal' for install tasks..."
+        set_env TD_UI_MODE "internal"
 
     info "✂️️ Unistalling..."
     cm_run_task uninstall
@@ -498,8 +504,8 @@ cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
-    echo "Running command: ${ENV_PREFIX}flake8 --select=E9,F63,F7,F82 --ignore=E203,W503 --show-source --statistics . --extend-exclude .venv,dist,build,.tabsdata,venv,test_*,tests_*"
-    exec --fail-on-error ${ENV_PREFIX}flake8 --select=E9,F63,F7,F82 --ignore=E203,W503 --show-source --statistics . --extend-exclude .venv,dist,build,.tabsdata,venv,test_*,tests_*
+    echo "Running command: ${ENV_PREFIX}flake8 --select=E9,F63,F7,F82 --ignore=E203,W503 --show-source --statistics . --extend-exclude .tabsdata,.venv,dist,build,tabsdata-ui,venv,test_*,tests_*"
+    exec --fail-on-error ${ENV_PREFIX}flake8 --select=E9,F63,F7,F82 --ignore=E203,W503 --show-source --statistics . --extend-exclude .tabsdata,.venv,dist,build,tabsdata-ui,venv,test_*,tests_*
     ''']
 
 [tasks.fmt_py_flake8_complexity]
@@ -508,8 +514,8 @@ cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
-    echo "Running command: ${ENV_PREFIX}flake8 --max-complexity=10 --ignore=E203,W503 --max-line-length=88 --statistics  . --extend-exclude .venv,dist,build,.tabsdata,venv,test_*,tests_*"
-    exec --fail-on-error ${ENV_PREFIX}flake8 --max-complexity=10 --ignore=E203,W503 --max-line-length=88 --statistics  . --extend-exclude .venv,dist,build,.tabsdata,venv,test_*,tests_*
+    echo "Running command: ${ENV_PREFIX}flake8 --max-complexity=10 --ignore=E203,W503 --max-line-length=88 --statistics  . --extend-exclude .tabsdata,.venv,dist,build,tabsdata-ui,venv,test_*,tests_*"
+    exec --fail-on-error ${ENV_PREFIX}flake8 --max-complexity=10 --ignore=E203,W503 --max-line-length=88 --statistics  . --extend-exclude .tabsdata,.venv,dist,build,tabsdata-ui,venv,test_*,tests_*
     ''']
 
 [tasks.fmt_py_black]
@@ -518,8 +524,8 @@ cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
-    echo "Running command: ${ENV_PREFIX}black --preview --enable-unstable-feature string_processing --check . --extend-exclude .tabsdata,test_*,tests_*"
-    exec --fail-on-error ${ENV_PREFIX}black --preview --enable-unstable-feature string_processing --check . --extend-exclude .tabsdata,test_*,tests_*
+    echo "Running command: ${ENV_PREFIX}black --preview --enable-unstable-feature string_processing --check . --extend-exclude .tabsdata,.venv,dist,build,tabsdata-ui,venv,test_*,tests_*"
+    exec --fail-on-error ${ENV_PREFIX}black --preview --enable-unstable-feature string_processing --check . --extend-exclude .tabsdata,.venv,dist,build,tabsdata-ui,venv,test_*,tests_*
     ''']
 
 [tasks.fmt_py_isort]
