[TD-567] Improve messages for wheel tasks in cargo make (#484)

--- a/Maketask.toml
+++ b/Maketask.toml
@@ -1420,15 +1420,31 @@ script = [
     array_push ${lines} ""
     array_push ${lines} ""
     array_push ${lines} "❗ The generated wheels are intended for use via a PyPI-compliant repository."
+    array_push ${lines} "❗ Installing them directly using 'pip install <wheel>' will result in an incomplete or incorrect setup."
     array_push ${lines} "❗ Upload them using the standard 'twine upload <wheel>'."
-    array_push ${lines} "❗ If you are using our devpi setup (http://localhost:3141/tabsdata/dev), be sure to set the environment variables below before installing."
+    array_push ${lines} "❗ If you are using our devpi setup (http://localhost:3141/tabsdata/dev), set the environment variables below before installing."
     array_push ${lines} "❗ These variables must be set in every terminal where you will run the tabsdata cli or the tabsdata server."
     array_push ${lines} ""
     array_push ${lines} "export PIP_INDEX_URL=http://localhost:3141/tabsdata/dev/"
     array_push ${lines} "export UV_EXTRA_INDEX_URL=http://localhost:3141/tabsdata/dev/"
     array_push ${lines} ""
-    array_push ${lines} "❗ Then install the packages using the standard 'pip install <package>' command."
+    array_push ${lines} "❗ Install the packages using the standard 'pip install <package>' command."
     array_push ${lines} "❗ If you are using multiple environments, remember to install the packages in each of them separately."
+    array_push ${lines} ""
+    array_push ${lines} "❗ Before starting any TabsData instance or using the cli, you must set the following environment variables."
+    array_push ${lines} "❗ These variables must be set in every terminal where you will run the tabsdata cli or the tabsdata server."
+    array_push ${lines} ""
+    array_push ${lines} "export PIP_INDEX_URL=http://localhost:3141/tabsdata/dev/"
+    array_push ${lines} "export UV_EXTRA_INDEX_URL=http://localhost:3141/tabsdata/dev/"
+    array_push ${lines} "export TD_CLI_SHOW=true"
+    array_push ${lines} "export PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES=false"
+    array_push ${lines} "export TD_IGNORE_CONNECTOR_REQUIREMENTS=false"
+    array_push ${lines} "export TD_INHERIT_TABSDATA_PACKAGES=false"
+    array_push ${lines} "export TD_PYTHON_LINKED_TO_REPOSITORY=true"
+    array_push ${lines} "export TD_SKIP_NON_EXISTING_ASSETS=false"
+    array_push ${lines} "export REQUIRE_SERVER_BINARIES=true"
+    array_push ${lines} "export REQUIRE_THIRD_PARTY=true"
+    array_push ${lines} ""
     message = array_join ${lines} "\n"
     info ${message}
     ''']
@@ -1489,10 +1505,25 @@ script = [
     array_push ${lines} ""
     array_push ${lines} "❗ The generated wheels are not suitable for distribution via a PyPI-compliant repository."
     array_push ${lines} "❗ Installing them through such a repository will result in an incomplete or incorrect setup."
-    array_push ${lines} "❗ You must install all wheels directly using 'pip install <wheel>' for each file."
+    array_push ${lines} ""
+    array_push ${lines} "❗ Install all wheels directly using 'pip install <wheel>' for each file."
     array_push ${lines} "❗ If you are using multiple environments, remember to install the packages in each of them separately."
+    array_push ${lines} ""
     array_push ${lines} "❗ Note: Dependencies between TabsData packages are not preserved in this mode; each wheel must be installed explicitly."
-
+    array_push ${lines} "❗ Before starting any tabsdata instance or using the cli, you must set the following environment variables."
+    array_push ${lines} "❗ These variables must be set in every terminal where you will run the tabsdata cli or the tabsdata server."
+    array_push ${lines} ""
+    array_push ${lines} "unset PIP_INDEX_URL"
+    array_push ${lines} "unset UV_EXTRA_INDEX_URL"
+    array_push ${lines} "export TD_CLI_SHOW=true"
+    array_push ${lines} "export PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES=true"
+    array_push ${lines} "export TD_IGNORE_CONNECTOR_REQUIREMENTS=true"
+    array_push ${lines} "export TD_INHERIT_TABSDATA_PACKAGES=true"
+    array_push ${lines} "export TD_PYTHON_LINKED_TO_REPOSITORY=false"
+    array_push ${lines} "export TD_SKIP_NON_EXISTING_ASSETS=true"
+    array_push ${lines} "export REQUIRE_SERVER_BINARIES=false"
+    array_push ${lines} "export REQUIRE_THIRD_PARTY=false"
+    array_push ${lines} ""
     message = array_join ${lines} "\n"
     info ${message}
     ''']
