--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -169,7 +169,7 @@ version = "2.0.104"
 features = ["full"]
 
 [workspace.dependencies.tokio]
-version = "1.45.1"
+version = "1.46.0"
 
 [workspace.dependencies.toml]
 version = "0.8.23"
@@ -200,3 +200,7 @@ toml = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
+
+# Version 0.17.12 has been flagged as yanked, but we cannot easily downgrade to version 0.17.11.
+[patch.crates-io]
+indicatif = { git = "https://github.com/console-rs/indicatif.git", tag = "0.17.12" }
