--- a/server/libraries/td-apiserver/Cargo.toml
+++ b/server/libraries/td-apiserver/Cargo.toml
@@ -82,6 +82,7 @@ getset = { workspace = true }
 http = { workspace = true }
 paste = { workspace = true }
 reqwest = { workspace = true }
+ring = { workspace = true }
 rustls = { workspace = true, features = ["aws-lc-rs"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
