[TD-572] Update Python dependencies (#489)

--- a/make/fragments/tasks/test_py.toml
+++ b/make/fragments/tasks/test_py.toml
@@ -407,8 +407,12 @@ script = [
     debug "🔷 _____ Copying assets..."
     cm_run_task copy_assets
 
-    debug "🔷 _____ Compiling..."
-    cm_run_task build
+    if eq ${compile} "true"
+        debug "🔷 _____ Compiling..."
+        cm_run_task build
+    else
+        debug "🔷 _____ Not Compiling..."
+    end
 
     debug "🔷 _____ Generating python binaries..."
     cm_run_task setup_pytest_tabsdata
