[TD-579] Log yaml directives examples in apiserver (#495)

--- a/server/binaries/td-server/resources/profiles/internal/default/workspace/config/proc/regular/apiserver/config/log.yaml
+++ b/server/binaries/td-server/resources/profiles/internal/default/workspace/config/proc/regular/apiserver/config/log.yaml
@@ -9,3 +9,8 @@ profiles:
     level: debug
     directives:
       - tower::buffer::worker=info
+      # Uncomment the following lines to set specific log levels for different components.
+      # By default, all components will inherit the level from the profile.
+      # - td_apiserver=error
+      # - td_objects::sql=error
+      # - td_services=error
